# pdf-parser

./: Cargo.toml  Dockerfile  LICENSE  README.md
deploy/: k8s.yaml  nginx.conf  restart.sh
examples/: test_headers.rs
src/: document.rs  error.rs  lib.rs  main.rs  wasm.rs
src/content/: mod.rs  parser.rs
src/decode/: flate.rs  mod.rs
src/extract/: layout.rs  markdown.rs  mod.rs  table.rs  txt.rs
src/font/: cmap.rs  encoding.rs  mod.rs
src/parser/: lexer.rs  mod.rs  object.rs
src/types/: mod.rs  object.rs
web/: index.html
